--- a/components/AdminMode/FeatureRequestsPage.module.css
+++ b/components/AdminMode/FeatureRequestsPage.module.css
@@ -376,7 +376,7 @@
 
 .creatorDropdown {
   position: absolute;
-  top: 100%;
+  bottom: 100%;
   left: 0;
   right: 0;
   background: #ffffff;
@@ -386,7 +386,7 @@
   max-height: 280px;
   overflow-y: auto;
   z-index: 1000;
-  margin-top: 4px;
+  margin-bottom: 4px;
 }
 
 .creatorOption {
